# FlowDraw

./: .gitignore  Jenkinsfile  LICENSE  README.md  google_drive_diagram_manager.py
diagramflow/: .gitignore  README.md  docker-compose.yml  package.json
diagramflow/backend/: .gitignore  README.md  manage.py  middleware.py  pyproject.toml  pytest.ini  settings.py  sonar-project.properties  urls.py
diagramflow/backend/apps/: views.py
diagramflow/backend/apps/accounts/: models.py  serializer.py  urls.py  views.py
diagramflow/backend/apps/accounts/migrations/: 0001_initial.py  0002_diagram.py  0003_diagram_google_drive_file_id_and_more.py  0004_diagram_name_alter_diagram_unique_together.py
diagramflow/backend/requirements/: base.txt  development.txt  production.txt
diagramflow/backend/tests/: conftest.py
diagramflow/backend/tests/api/: test_api_diagram.py  test_auth.py  test_auth_negative.py  test_diagram.py  test_google_auth.py  test_google_drive.py  test_limits.py  test_permissions.py  test_refresh_logout.py
diagramflow/backend/tests/models/: test_models_diagram.py  test_user.py
diagramflow/backend/tests/serializers/: test_diagram_serializer.py
diagramflow/deployment/: clean-up.ps1  clean-up.sh
diagramflow/e2e/: cypress.config.js
diagramflow/frontend/: README.md  eslint.config.js  generateSvgList.js  index.html  package-lock.json  package.json  vite.config.ts
diagramflow/frontend/src/: App.css  App.tsx  Dashboard.tsx  main.tsx  svgList.ts  svgListEntityRelationship.ts  svgListFlowChart.ts  svgListNetwork.ts  svgListUML.ts
diagramflow/frontend/src/components/: AppSideBar.tsx  CarouselElement.tsx  GridLayer.tsx  (+3 more)
(+51 files in other folders)
